# elinkapi

./: .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  bom.json  elinkapi_test.py  error.py  error_response.py  identifier.py  media_file.py  media_info.py  organization.py  ostiapi.py  ostiapi_test.py  publishing_steps.md  pyproject.toml  record.py  requirements.txt  revisions.py
.github/workflows/: main.yml
examples/: README.md  config.py  details.py  history.py  reserve.py  search.py
models/: revisions.py
ostiapi/: README.md  ostiapi.py  pyproject.toml  setup.py
ostiapi/models/: geolocation.py  media_info.py  organization.py  record.py  revision_comparison.py
src/elinkapi/: __init__.py  __version__.py  affiliation.py  auditlogs.py  contribution.py  elinkapi.py  exceptions.py  geolocation.py  identifier.py  media_file.py  media_info.py  organization.py  person.py  query.py  record.py  related_identifier.py  revision.py  utils.py
src/ostiapi/: __init__.py  __version__.py  media_file.py  ostiapi.py  person.py  record.py  related_identifier.py  revision.py  revision_comparison.py
test_media_files/: another_media_file.txt  best_media_file.txt  media_file.txt
